--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "template-react-project",
+  "name": "f1-insights-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://mdixey17.github.io/f1-insights-hub",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -26,6 +29,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
